--- a/server/bundles/io.cloudbeaver.resources.drivers.base/plugin.xml
+++ b/server/bundles/io.cloudbeaver.resources.drivers.base/plugin.xml
@@ -16,6 +16,7 @@
         <resource name="drivers/sqlite/xerial"/>
         <resource name="drivers/mssql/new"/>
         <resource name="drivers/trino"/>
+        <resource name="drivers/kyuubi"/>
     </extension>
 
     <!-- Bundles  -->
@@ -34,6 +35,7 @@
         <bundle id="drivers.sqlite.xerial" label="SQLite drivers"/>
         <bundle id="drivers.mssql.new" label="SQL Server drivers"/>
         <bundle id="drivers.trino" label="Trino drivers"/>
+        <bundle id="drivers.kyuubi" label="Apache Kyuubi (Incubating) drivers"/>
     </extension>
 
     <!-- Enabled drivers -->
@@ -52,6 +54,7 @@
         <driver id="sqlite:sqlite_jdbc"/>
         <driver id="sqlserver:microsoft"/>
         <driver id="generic:trino_jdbc"/>
+        <driver id="generic:kyuubi_hive"/>
     </extension>
 
 
