--- a/server/drivers/pom.xml
+++ b/server/drivers/pom.xml
@@ -18,6 +18,7 @@
         <module>derby</module>
         <module>h2</module>
         <module>jaybird</module>
+        <module>kyuubi</module>
         <module>mysql</module>
         <module>mariadb</module>
         <module>oracle</module>
